--- a/categories.html
+++ b/categories.html
@@ -27,6 +27,7 @@
     <div class="container category-container">
         <h1>Detailed Categories</h1>
         <p class="category-info">Click a headline to expand it. Enter an amount and it will be automatically saved.</p>
+        <p id="category-feedback" class="feedback-message"></p>
         <div class="category-list">
             
             <div class="category-group">
