--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,7 @@
             <input type="email" id="signup-email" placeholder="Email" required>
             <button type="submit">Create Account</button>
         </form>
+        <p id="signup-feedback" class="feedback-message"></p>
         <a href="login.html">Already have an account? Log In</a>
     </div>
     <script src="script.js"></script>
