--- a/login.html
+++ b/login.html
@@ -15,8 +15,7 @@
             <input type="password" id="login-password" placeholder="Password" required>
             <button type="submit">Log In</button>
         </form>
-        <p id="error-message" class="error-message"></p>
-        
+        <p id="login-feedback" class="feedback-message"></p>
         <a href="signup.html">Don't have an account? Sign Up</a>
         <a href="forgot-password.html" id="forgot-password-link">Forgot Password?</a>
     </div>
